[FEAT]- Documents all routes
