# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api
 definitions:
+  structs.Constituency:
+    properties:
+      district:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   structs.District:
     properties:
       code:
@@ -15,6 +24,47 @@ definitions:
           type: string
         type: array
     type: object
+  structs.ResidentialArea:
+    properties:
+      code:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      region:
+        type: string
+      residential_areas:
+        items:
+          type: string
+        type: array
+    type: object
+  structs.Village:
+    properties:
+      district:
+        type: string
+      id:
+        type: integer
+      village_name:
+        type: string
+    type: object
+  structs.Ward:
+    properties:
+      constituency:
+        type: string
+      district_code:
+        type: string
+      district_name:
+        type: string
+      id:
+        type: integer
+      region:
+        type: string
+      wards:
+        items:
+          type: string
+        type: array
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -25,7 +75,82 @@ info:
   title: Malawi Country Data API
   version: 1.0.2
 paths:
-  /District/Region/{region}:
+  /Constituencies:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the constituencies
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Constituency'
+      summary: Gets all the country constituencies
+      tags:
+      - Constituencies
+  /Constituencies/Region/Central:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the constituencies in the Central region
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Constituency'
+      summary: Gets all Central region constituencies
+      tags:
+      - Constituencies
+  /Constituencies/Region/Northern:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the constituencies in the northern region
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Constituency'
+      summary: Gets all northern region constituencies
+      tags:
+      - Constituencies
+  /Constituencies/Region/Southern:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the constituencies in the southern region
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Constituency'
+      summary: Gets all southern region constituencies
+      tags:
+      - Constituencies
+  /Districts:
+    get:
+      consumes:
+      - application/json
+      description: Gets all districts with their related information
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.District'
+      summary: Gets all districts
+      tags:
+      - Districts
+  /Districts/Region/{region}:
     get:
       consumes:
       - application/json
@@ -43,10 +168,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/structs.District'
-      summary: Search district
+      summary: Search District
       tags:
       - Districts
-  /District/Search/{search}:
+  /Districts/Search/{search}:
     get:
       consumes:
       - application/json
@@ -64,14 +189,50 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/structs.District'
-      summary: Search District
+      summary: Search District/Code
       tags:
       - Districts
-  /Districts:
+  /ResidentialAreas:
     get:
       consumes:
       - application/json
-      description: Get user details by their ID
+      description: Gets all Residential Area records
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.ResidentialArea'
+      summary: Gets all Residential Areas
+      tags:
+      - Residential Area
+  /ResidentialAreas/Search/{search}:
+    get:
+      consumes:
+      - application/json
+      description: Searches though Residential Area records
+      parameters:
+      - description: Residential Area
+        in: path
+        name: search
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.ResidentialArea'
+      summary: Searches for Residential Areas
+      tags:
+      - Residential Area
+  /TraditionalAuthorities:
+    get:
+      consumes:
+      - application/json
+      description: Gets all Traditional Authority records
       produces:
       - application/json
       responses:
@@ -79,7 +240,166 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/structs.District'
-      summary: Get all districts
+      summary: Gets Traditional authorities
       tags:
-      - Districts
+      - Traditional Authority
+  /TraditionalAuthorities/Search/{search}:
+    get:
+      consumes:
+      - application/json
+      description: Searches though Traditional Authority records
+      parameters:
+      - description: Traditional Authority
+        in: path
+        name: search
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.District'
+      summary: Searches Traditional authorities
+      tags:
+      - Traditional Authority
+  /Villages:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the villages
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Village'
+      summary: Gets all the country villages
+      tags:
+      - villages
+  /Villages/District/{search}:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the villages in district
+      parameters:
+      - description: District
+        in: path
+        name: district
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Village'
+      summary: Gets all the country villages in a district
+      tags:
+      - villages
+  /Villages/Search/{search}:
+    get:
+      consumes:
+      - application/json
+      description: Gets all the villages in district
+      parameters:
+      - description: village
+        in: path
+        name: village
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Village'
+      summary: Searches village name
+      tags:
+      - villages
+  /Wards:
+    get:
+      consumes:
+      - application/json
+      description: Gets all Ward records
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Ward'
+      summary: Gets all Wards
+      tags:
+      - Wards
+  /Wards/District/{search}:
+    get:
+      consumes:
+      - application/json
+      description: Gets all wards by district name
+      parameters:
+      - description: District name
+        in: path
+        name: search
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Ward'
+      summary: Searches wards by district
+      tags:
+      - Wards
+  /Wards/Region/Central:
+    get:
+      consumes:
+      - application/json
+      description: Gets all central region wards
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Ward'
+      summary: Gets all wards in the Central region
+      tags:
+      - Wards
+  /Wards/Region/Northern:
+    get:
+      consumes:
+      - application/json
+      description: Gets all northern region wards
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Ward'
+      summary: Gets all wards in the northern region
+      tags:
+      - Wards
+  /Wards/Region/Southern:
+    get:
+      consumes:
+      - application/json
+      description: Gets all southern region wards
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/structs.Ward'
+      summary: Gets all wards in the southern region
+      tags:
+      - Wards
 swagger: "2.0"
