# src/controller/residential_area.go
@@ -1,4 +1,4 @@
-package routes
+package controller
 
 import (
 	"encoding/json"
@@ -12,6 +12,14 @@ import (
 
 var residential_areas []structs.ResidentialArea
 
+// @Summary 		Searches for Residential Areas
+// @Description 	Searches though Residential Area records
+// @Tags 			Residential Area
+// @Param 			search path string true "Residential Area"
+// @Accept 			json
+// @Produce			application/json
+// @Success 		200 {object} structs.ResidentialArea{}
+// @Router 			/ResidentialAreas/Search/{search} [get]
 func SearchResidentialArea(client *gin.Context){
 	search := client.Param("search")
 	query = fmt.Sprintf(`SELECT  json_build_object('id', d.id, 'name', d.name, 'code', d.code, 'region', d.region, 'residential_areas', (SELECT json_agg(ra.name) FROM residential_areas ra WHERE ra.district_id=d.id)) as district 
@@ -20,6 +28,13 @@ func SearchResidentialArea(client *gin.Context){
 	getResidentialArea(client,query)
 }
 
+// @Summary 		Gets all Residential Areas
+// @Description 	Gets all Residential Area records
+// @Tags 			Residential Area
+// @Accept 			json
+// @Produce			application/json
+// @Success 		200 {object} structs.ResidentialArea{}
+// @Router 			/ResidentialAreas [get]
 func GetResidentialAreas(client *gin.Context){
 	query := `SELECT json_build_object('id', d.id, 'name', d.name, 'code', d.code, 'region', d.region, 'residential_areas', (SELECT json_agg(ra.name) FROM residential_areas ra WHERE ra.district_id=d.id)) as district 
 				FROM districts d, residential_areas r 
